styling. fixed background image not centered on larger screens issue.

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -458,6 +458,7 @@ html, body {
       height: 90%;
       background-repeat: no-repeat;
       background-size: contain;
+      background-position: center;
       background-position-y: 200px;
       margin-left: auto;
       margin-right: auto;
